php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #70198 Checking liveness does not work as expected
Submitted: 2015-08-06 01:02 UTC Modified: -
From: shafreeck at 163 dot com Assigned:
Status: Closed Package: *General Issues
PHP Version: master-Git-2015-08-06 (Git) OS: Linux
Private report: No CVE-ID: None
 [2015-08-06 01:02 UTC] shafreeck at 163 dot com
Description:
------------
Syscall recv won't set errno if the call successes. So if errno is
EWOULDBLOCK and the peer closed connection, recv returns 0 and errno
remains EWOULDBLOCK. That will fail the if condition. The bug may
confuse the users with some unexpected behavier.

Github : https://github.com/php/php-src/pull/1456


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-08-11 13:23 UTC] ab@php.net
Automatic comment on behalf of ab
Revision: http://git.php.net/?p=php-src.git;a=commit;h=24f0fe6b1f53e2d610dc27c04b0c6cd9927f4d4a
Log: Fixed bug #70198 Checking liveness does not work as expected
 [2015-08-11 13:23 UTC] ab@php.net
-Status: Open +Status: Closed
 [2015-08-11 15:39 UTC] ab@php.net
Automatic comment on behalf of ab
Revision: http://git.php.net/?p=php-src.git;a=commit;h=797e30f4fc9fae94b92e314aac9a16cff2d5b50b
Log: Fixed bug #70198 Checking liveness does not work as expected
 [2015-08-18 16:24 UTC] ab@php.net
Automatic comment on behalf of ab
Revision: http://git.php.net/?p=php-src.git;a=commit;h=797e30f4fc9fae94b92e314aac9a16cff2d5b50b
Log: Fixed bug #70198 Checking liveness does not work as expected
 [2015-08-18 16:24 UTC] ab@php.net
Automatic comment on behalf of ab
Revision: http://git.php.net/?p=php-src.git;a=commit;h=24f0fe6b1f53e2d610dc27c04b0c6cd9927f4d4a
Log: Fixed bug #70198 Checking liveness does not work as expected
 [2016-07-20 11:37 UTC] davey@php.net
Automatic comment on behalf of ab
Revision: http://git.php.net/?p=php-src.git;a=commit;h=24f0fe6b1f53e2d610dc27c04b0c6cd9927f4d4a
Log: Fixed bug #70198 Checking liveness does not work as expected
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 20:00:01 2026 UTC