Fixed bug #70198 Checking liveness does not work as expected